--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,3 +1,7 @@
-<p>homepage works!</p>
-<h1> CIAO ANGELO</h1>
-<h2> PROVA PROVA</h2>
+<h2>DVD RENTAL WEB APP</h2>
+<div class="dvd-menu">
+  <a *ngFor="let dvd of dvds"
+     routerLink="/detail/{{dvd.id}}">
+    {{dvd.name}}
+  </a>
+</div>
