--- a/src/app/test-actor-component/test-actor-component.component.html
+++ b/src/app/test-actor-component/test-actor-component.component.html
@@ -14,6 +14,17 @@
       </li>
     </ul>
   </div>
+
+  <div *ngIf="films">
+    <ul>
+      <li *ngFor="let film of films">
+        <div class="todo">
+          <span class="todo-name">{{ film.title }}</span>
+          <span class="todo-name">{{ film.release_year }}</span>
+        </div>
+      </li>
+    </ul>
+  </div>
   -->
 
   <div>
