Integrate le modifiche di Edoardo relative al filtro di ricerca e implementate le seguenti funzionalità: - Aggiunta la query getActorsByFilm lato client - Implementata la modale per accedere alle informazioni di dettaglio film - Creata la pagina di dettaglio film - Implementato il routing (da usare poi per login)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,8 +6,8 @@
 
 <div class="content" role="main">
   <!--<app-test-actor-component/> -->
-  <<app-login></app-login>
-  <!--app-home/> -->
+  <!--<app-login></app-login> -->
+  <app-home/>
 
   <input type="hidden" #selection>
   <div class="card-container"></div>
