--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,9 +5,10 @@
 
 
 <div class="content" role="main">
-  <!--<app-test-actor-component/> -->
-  <!--<app-login></app-login> -->
-  <app-home/>
+
+    <app-login></app-login>
+
+  <!-- <app-home/> -->
 
   <input type="hidden" #selection>
   <div class="card-container"></div>
