Modifiche login 5 Giugno

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,11 +5,7 @@
 
 
 <div class="content" role="main">
-
-    <app-login></app-login>
-
-  <!-- <app-home/> -->
-
+  <router-outlet></router-outlet>
   <input type="hidden" #selection>
   <div class="card-container"></div>
 
