--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,12 +1,14 @@
-<h2>Login</h2>
-<form (ngSubmit)="onSubmit()">
-  <div>
-    <label for="customer_id">Username</label>
-    <input type="customer_id" id="customer_id" [(ngModel)]="customer_id" name="customer_id" required>
-  </div>
-  <div>
-    <label for="userpassword">Password</label>
-    <input type="userpassword" id="userpassword" [(ngModel)]="userpassword" name="userpassword" required>
-  </div>
-  <button type="submit">Login</button>
-</form>
+<div class="login-container">
+  <h2>Login</h2>
+  <form (ngSubmit)="onSubmit()">
+    <div class="field-style">
+      <label for="customer_id">Customer ID</label>
+      <input type="customer_id" id="customer_id" [(ngModel)]="customer_id" name="customer_id" required>
+    </div>
+    <div class="field-style">
+      <label for="userpassword">Password</label>
+      <input type="userpassword" id="userpassword" [(ngModel)]="userpassword" name="userpassword" required>
+    </div>
+    <button class="button-style"  type="submit">Login</button>
+  </form>
+</div>
