--- a/src/app/past-rental/past-rental.component.html
+++ b/src/app/past-rental/past-rental.component.html
@@ -5,3 +5,17 @@
     <h1 class="user"> {{ userFirstName }} {{userLastName}} </h1>
   </div>
 </div>
+
+<div class="table">
+  <table mat-table [dataSource]="pastRentalsFilms">
+
+    <ng-container matColumnDef="title">
+      <th mat-header-cell *matHeaderCellDef>Title</th>
+      <td mat-cell *matCellDef="let film">{{ film.title }}</td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+  </table>
+</div>
