--- a/src/app/past-rental/past-rental.component.html
+++ b/src/app/past-rental/past-rental.component.html
@@ -3,6 +3,7 @@
 
     <div class="avatar">{{ userFirstName.charAt(0) }}</div>
     <h1 class="user"> {{ userFirstName }} {{userLastName}} </h1>
+    <h2> Costo totale è: {{ totalAmount }} </h2>
   </div>
 </div>
 
@@ -12,6 +13,21 @@
     <ng-container matColumnDef="title">
       <th mat-header-cell *matHeaderCellDef>Title</th>
       <td mat-cell *matCellDef="let film">{{ film.title }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="rental_date">
+      <th mat-header-cell *matHeaderCellDef>Rental Date</th>
+      <td mat-cell *matCellDef="let film">{{ film.rental_date.split("T")[0] }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="return_date">
+      <th mat-header-cell *matHeaderCellDef>Return Date</th>
+      <td mat-cell *matCellDef="let film">{{ film.return_date.split("T")[0] }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="amount">
+      <th mat-header-cell *matHeaderCellDef>Amount</th>
+      <td mat-cell *matCellDef="let film">{{ film.amount }}</td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
