Fixato il problema della spesa totale nei noleggi passati

--- a/src/app/past-rental/past-rental.component.html
+++ b/src/app/past-rental/past-rental.component.html
@@ -3,7 +3,7 @@
 
     <div class="avatar">{{ userFirstName.charAt(0) }}</div>
     <h1 class="user"> {{ userFirstName }} {{userLastName}} </h1>
-    <h2> Costo totale è: {{ totalAmount }} </h2>
+    <h2> Spesa totale dei noleggi passati:  {{ totalAmount }} </h2>
   </div>
 </div>
 
