--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -11,6 +11,10 @@
   margin-right: 50px;
 }
 
+.table td {
+  width: 30%;
+}
+
 .mat-mdc-row .mat-mdc-cell {
   border-bottom: 1px solid transparent;
   border-top: 1px solid transparent;
