--- a/src/app/past-rental/past-rental.component.html
+++ b/src/app/past-rental/past-rental.component.html
@@ -1,37 +1,35 @@
 <div class="main">
   <div class="container">
-
     <div class="avatar">{{ userFirstName.charAt(0) }}</div>
     <h1 class="user"> {{ userFirstName }} {{userLastName}} </h1>
-    <h2> Spesa totale dei noleggi passati:  {{ totalAmount }} </h2>
+    <h2> Spesa totale noleggi passati: {{ totalAmount }} €</h2>
   </div>
-</div>
 
-<div class="table">
-  <table mat-table [dataSource]="pastRentalsFilms">
+  <div class="table">
+    <table mat-table [dataSource]="pastRentalsFilms">
 
-    <ng-container matColumnDef="title">
-      <th mat-header-cell *matHeaderCellDef>Title</th>
-      <td mat-cell *matCellDef="let film">{{ film.title }}</td>
-    </ng-container>
+      <ng-container matColumnDef="title">
+        <th mat-header-cell *matHeaderCellDef>Title</th>
+        <td (click)="openMovieDetails(film)" mat-cell *matCellDef="let film">{{ film.title }}</td>
+      </ng-container>
 
-    <ng-container matColumnDef="rental_date">
-      <th mat-header-cell *matHeaderCellDef>Rental Date</th>
-      <td mat-cell *matCellDef="let film">{{ film.rental_date.split("T")[0] }}</td>
-    </ng-container>
+      <ng-container matColumnDef="rental_date">
+        <th mat-header-cell *matHeaderCellDef>Rental Date</th>
+        <td mat-cell *matCellDef="let film">{{ film.rental_date.split("T")[0] }}</td>
+      </ng-container>
 
-    <ng-container matColumnDef="return_date">
-      <th mat-header-cell *matHeaderCellDef>Return Date</th>
-      <td mat-cell *matCellDef="let film">{{ film.return_date.split("T")[0] }}</td>
-    </ng-container>
+      <ng-container matColumnDef="return_date">
+        <th mat-header-cell *matHeaderCellDef>Return Date</th>
+        <td mat-cell *matCellDef="let film">{{ film.return_date.split("T")[0] }}</td>
+      </ng-container>
 
-    <ng-container matColumnDef="amount">
-      <th mat-header-cell *matHeaderCellDef>Amount</th>
-      <td mat-cell *matCellDef="let film">{{ film.amount }}</td>
-    </ng-container>
+      <ng-container matColumnDef="amount">
+        <th mat-header-cell *matHeaderCellDef>Amount</th>
+        <td mat-cell *matCellDef="let film">{{ film.amount }}</td>
+      </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-
-  </table>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+  </div>
 </div>
