--- a/src/app/personal-rental/personal-rental.component.html
+++ b/src/app/personal-rental/personal-rental.component.html
@@ -1,7 +1,24 @@
 <div class="main">
   <div class="container">
-
     <div class="avatar">{{ userFirstName.charAt(0) }}</div>
     <h1 class="user"> {{ userFirstName }} {{userLastName}} </h1>
+  </div>
+
+  <div class="table">
+    <table mat-table [dataSource]="activeRentalsFilms">
+
+      <ng-container matColumnDef="title">
+        <th mat-header-cell *matHeaderCellDef>Title</th>
+        <td (click)="openMovieDetails(film)" mat-cell *matCellDef="let film">{{ film.title }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="rental_rate">
+        <th mat-header-cell *matHeaderCellDef>Rental Date</th>
+        <td mat-cell *matCellDef="let film">{{ film.rental_rate }}</td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
   </div>
 </div>
