Modifiche per bottone per tornare all'Home

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!-- Toolbar -->
 <div class="toolbar" role="banner">
-  <h3 class="title-toolbar"> DVD RENTAL WEB APPLICATION</h3>
+  <h3 class="title-toolbar"> NOLEGGIO DVD </h3>
 </div>
 
 
