--- a/src/app/personal-rental/personal-rental.component.html
+++ b/src/app/personal-rental/personal-rental.component.html
@@ -2,18 +2,20 @@
   <div class="container">
     <div class="avatar">{{ userFirstName.charAt(0) }}</div>
     <h1 class="user"> {{ userFirstName }} {{userLastName}} </h1>
+    <button class="rentals-past-style" (click)="backToHome()"> RITORNA ALL'HOME PAGE </button>
+
   </div>
 
   <div class="table">
     <table mat-table [dataSource]="activeRentalsFilms">
 
       <ng-container matColumnDef="title">
-        <th mat-header-cell *matHeaderCellDef>Title</th>
+        <th mat-header-cell *matHeaderCellDef>Titolo</th>
         <td (click)="openMovieDetails(film)" mat-cell *matCellDef="let film">{{ film.title }}</td>
       </ng-container>
 
       <ng-container matColumnDef="rental_rate">
-        <th mat-header-cell *matHeaderCellDef>Rental Date</th>
+        <th mat-header-cell *matHeaderCellDef>Tariffa giornaliera</th>
         <td mat-cell *matCellDef="let film">{{ film.rental_rate }}</td>
       </ng-container>
 
