--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,12 +2,13 @@
   <div class="container">
     <div class="avatar">{{ userFirstName.charAt(0) }}</div>
     <h1 class="user"> {{ userFirstName }} {{userLastName}} </h1>
+    <h2> TEST AGGIUNTA </h2>
 
     <!-- RICERCA DINAMICA PER TITOLO -->
-    <input class="search-container" type="text" placeholder="Ricerca per titolo" [(ngModel)]="searchTitle" (keyup)="searchByTitle()">
+    <input class="search-container" type="text" placeholder="Ricerca per titolo" [(ngModel)]="searchTitle" (keyup)="searchBy()">
 
     <!-- RICERCA PER CATEGORIA -->
-    <select class="category-style" [(ngModel)]="selectedCategory" (change)="searchByCategory()">
+    <select class="category-style" [(ngModel)]="selectedCategory" (change)="searchBy()">
       <option value="">Tutte le categorie</option>
       <option value="Action">Action</option>
       <option value="Animation">Animation</option>
@@ -62,7 +63,7 @@
 
       <ng-container matColumnDef="cost">
         <th mat-header-cell *matHeaderCellDef>Costo</th>
-        <td mat-cell *matCellDef="let film">{{ film.cost }}</td>
+        <td mat-cell *matCellDef="let film">{{ film.cost }} € </td>
       </ng-container>
 
       <ng-container matColumnDef="action">
