--- a/src/app/past-rental/past-rental.component.html
+++ b/src/app/past-rental/past-rental.component.html
@@ -4,11 +4,11 @@
     <h1 class="user"> {{ userFirstName }} {{userLastName}} </h1>
     <h2> Spesa totale noleggi passati: {{ totalAmount }} €</h2>
 
-    <button class="rentals-past-style" (click)="backToHome()"> RITORNA ALL'HOME PAGE </button>
+    <button class="button-home" (click)="backToHome()"> RITORNA ALL'HOME PAGE </button>
 
   </div>
 
-  <div class="table">
+  <div class="table" *ngIf="pastRentalsFilms.length > 0; else noRentals">
     <table mat-table [dataSource]="pastRentalsFilms">
 
       <ng-container matColumnDef="title">
@@ -28,11 +28,15 @@
 
       <ng-container matColumnDef="amount">
         <th mat-header-cell *matHeaderCellDef>Costo</th>
-        <td mat-cell *matCellDef="let film">{{ film.amount }}</td>
+        <td mat-cell *matCellDef="let film">{{ film.amount }}€</td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
   </div>
+
+  <ng-template #noRentals>
+    <p> NON CI SONO NOLEGGI PASSATI </p>
+  </ng-template>
 </div>
