--- a/src/app/personal-rental/personal-rental.component.html
+++ b/src/app/personal-rental/personal-rental.component.html
@@ -2,11 +2,11 @@
   <div class="container">
     <div class="avatar">{{ userFirstName.charAt(0) }}</div>
     <h1 class="user"> {{ userFirstName }} {{userLastName}} </h1>
-    <button class="rentals-past-style" (click)="backToHome()"> RITORNA ALL'HOME PAGE </button>
+    <button class="button-home" (click)="backToHome()"> RITORNA ALL'HOME PAGE </button>
 
   </div>
 
-  <div class="table">
+  <div class="table" *ngIf="activeRentalsFilms.length > 0; else noRentals">
     <table mat-table [dataSource]="activeRentalsFilms">
 
       <ng-container matColumnDef="title">
@@ -16,11 +16,15 @@
 
       <ng-container matColumnDef="rental_rate">
         <th mat-header-cell *matHeaderCellDef>Tariffa giornaliera</th>
-        <td mat-cell *matCellDef="let film">{{ film.rental_rate }}</td>
+        <td mat-cell *matCellDef="let film">{{ film.rental_rate }}€</td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
   </div>
+
+  <ng-template #noRentals>
+    <p> NON CI SONO NOLEGGI ATTIVI </p>
+  </ng-template>
 </div>
