--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,99 +1,92 @@
-.form {
+.main{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.table {
-  width: 900px;
-  flex: 2;
-  padding: 10px;
-  margin-right: 50px;
-}
-
-.mat-mdc-row .mat-mdc-cell {
-  border-bottom: 1px solid transparent;
-  border-top: 1px solid transparent;
-  cursor: pointer;
-}
-
-.mat-mdc-row:hover .mat-mdc-cell {
-  border-color: currentColor;
-}
-
-.mat-mdc-form-field {
-  font-size: 14px;
-  width: 100%;
+  margin-top: 30px;
 }
 
 .container {
   display: flex;
   flex-direction: column;
-  margin-right: 80px;
+  justify-content: flex-start;
 }
 
-.search-container {
-  width: 300px;
-  font-size: 14px;
-  max-width: 200px;
-  max-height: 50px;
-  border: 2px solid #1976D2;
-  padding: 6px;
-  margin-top: 20px; /* Spazio superiore */
-}
-
-.main{
-  display: flex;
-}
-
-.category-style {
-  width: 300px;
-  font-size: 14px;
-  max-width: 215px;
-  max-height: 50px;
-  border: 2px solid #1976D2;
-  padding: 6px;
-  margin-top: 20px;
-  align-self: center;
-}
-
-.user{
-  font-size: 28px;
-  color: black;
-  align-self: center;
-}
-
-.avatar {
+.avatar{
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  background-color: #000;
+  background-color: #1976D2;
   color: #fff;
   text-align: center;
   line-height: 50px;
   font-size: 24px;
+  font-weight: bold;
   align-self: center;
+}
+
+.user{
+  font-size: 24px;
+  align-self: center;
+}
+
+.search-container {
+  width: 200px;
+  max-width: 200px;
   margin-top: 20px;
 }
 
+.category-style {
+  width: 200px;
+  max-width: 200px;
+  align-self: center;
+  margin-bottom: 20px;
+}
+
+.personal-rental-style,
 .rentals-past-style{
-  max-width: 220px;
-  max-height: 50px;
-  border: 2px solid #1976D2;
-  padding: 6px;
   margin-top: 20px;
-  font-size: 14px;
-  background-color: transparent; /* Rimuove lo sfondo grigio */
-  cursor: pointer; /* Il muose diventa una manina */
 }
 
-.personal-rental-style{
-  max-width: 220px;
-  max-height: 50px;
-  border: 2px solid #1976D2;
-  padding: 6px;
-  margin-top: 20px;
-  font-size: 14px;
-  background-color: transparent;
+.table {
+  width: 80%;
+  margin-left: 80px;
+}
+
+table{
+  width: 100%;
+  border-collapse: collapse;
+}
+
+th,
+td {
+  padding: 10px;
+  text-align: center;
+}
+
+button {
+  margin-right: 10px;
+}
+
+th {
+  width: 200px;
+}
+
+td {
+  min-width: 100px;
+  border-bottom: 1px solid #ccc;
+}
+
+.mat-mdc-row .mat-mdc-cell {
   cursor: pointer;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
