--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,82 +1,89 @@
-<div class="main">
-  <div class="container">
-    <div class="avatar">{{ userFirstName.charAt(0) }}</div>
-    <h1 class="user"> {{ userFirstName }} {{userLastName}} </h1>
+<mat-sidenav-container class="sidenav-container" >
+  <mat-sidenav #sidenav [opened]="isSidenavOpen" class="sidenav-left">
+    <div class="container">
+      <div class="avatar">{{ userFirstName.charAt(0) }}</div>
+      <h1 class="user"> {{ userFirstName }} {{userLastName}} </h1>
 
-    <button mat-raised-button class="rentals-past-style" (click)="openPastRental()">Noleggi passati</button>
-    <button mat-raised-button class="personal-rental-style" (click)="openPersonalRental()">Noleggi attivi</button>
+      <button mat-raised-button color="primary" class="rentals-past-style" (click)="openPastRental()">Noleggi passati</button>
+      <button mat-raised-button color="primary" class="personal-rental-style" (click)="openPersonalRental()">Noleggi attivi</button>
 
-    <!-- RICERCA DINAMICA PER TITOLO -->
-    <mat-form-field class="search-container">
-      <input matInput type="text" placeholder="Ricerca per titolo" [(ngModel)]="searchTitle" (keyup)="searchBy()">
-    </mat-form-field>
+    </div>
+  </mat-sidenav>
 
+  <mat-sidenav-content>
+      <div class="bottom-style">
+        <button class="bottom-menu" mat-raised-button color="primary" (click)="toggleSidenav()">Menu </button>
 
-    <!-- RICERCA PER CATEGORIA -->
-    <mat-form-field appearance="fill" class="category-style">
-      <mat-label>Tutte le categorie</mat-label>
-      <mat-select [(ngModel)]="selectedCategory" (selectionChange)="searchBy()">
-        <mat-option value="">Tutte le categorie</mat-option>
-        <mat-option value="Action">Action</mat-option>
-        <mat-option value="Animation">Animation</mat-option>
-        <mat-option value="Children">Children</mat-option>
-        <mat-option value="Classics">Classics</mat-option>
-        <mat-option value="Comedy">Comedy</mat-option>
-        <mat-option value="Documentary">Documentary</mat-option>
-        <mat-option value="Drama">Drama</mat-option>
-        <mat-option value="Family">Family</mat-option>
-        <mat-option value="Foreign">Foreign</mat-option>
-        <mat-option value="Games">Games</mat-option>
-        <mat-option value="Horror">Horror</mat-option>
-        <mat-option value="Music">Music</mat-option>
-        <mat-option value="New">New</mat-option>
-        <mat-option value="Sci-Fi">Sci-Fi</mat-option>
-        <mat-option value="Sport">Sport</mat-option>
-        <mat-option value="Travel">Travel</mat-option>
-      </mat-select>
-    </mat-form-field>
+        <!-- RICERCA PER CATEGORIA -->
+        <mat-form-field>
+          <mat-label>Tutte le categorie</mat-label>
+          <mat-select [(ngModel)]="selectedCategory" (selectionChange)="searchBy()">
+            <mat-option value="">Tutte le categorie</mat-option>
+            <mat-option value="Action">Action</mat-option>
+            <mat-option value="Animation">Animation</mat-option>
+            <mat-option value="Children">Children</mat-option>
+            <mat-option value="Classics">Classics</mat-option>
+            <mat-option value="Comedy">Comedy</mat-option>
+            <mat-option value="Documentary">Documentary</mat-option>
+            <mat-option value="Drama">Drama</mat-option>
+            <mat-option value="Family">Family</mat-option>
+            <mat-option value="Foreign">Foreign</mat-option>
+            <mat-option value="Games">Games</mat-option>
+            <mat-option value="Horror">Horror</mat-option>
+            <mat-option value="Music">Music</mat-option>
+            <mat-option value="New">New</mat-option>
+            <mat-option value="Sci-Fi">Sci-Fi</mat-option>
+            <mat-option value="Sport">Sport</mat-option>
+            <mat-option value="Travel">Travel</mat-option>
+          </mat-select>
+        </mat-form-field>
 
-  </div>
+        <!-- RICERCA DINAMICA PER TITOLO -->
+        <mat-form-field class="search-container">
+          <input matInput type="text" placeholder="Ricerca per titolo" [(ngModel)]="searchTitle" (keyup)="searchBy()">
+        </mat-form-field>
+      </div>
 
-  <div class="table">
-    <table mat-table [dataSource]="films">
-      <ng-container matColumnDef="title">
-        <th mat-header-cell *matHeaderCellDef>Titolo</th>
-        <td (click)="openMovieDetails(film)" mat-cell *matCellDef="let film">{{ film.title }}</td>
-      </ng-container>
+    <div class="table">
+      <table mat-table [dataSource]="films">
+        <ng-container matColumnDef="title">
+          <th mat-header-cell *matHeaderCellDef>Titolo</th>
+          <td (click)="openMovieDetails(film)" mat-cell *matCellDef="let film">{{ film.title }}</td>
+        </ng-container>
 
-      <ng-container matColumnDef="release_year">
-        <th mat-header-cell *matHeaderCellDef>Anno di uscita</th>
-        <td mat-cell *matCellDef="let film">{{ film.release_year }}</td>
-      </ng-container>
+        <ng-container matColumnDef="release_year">
+          <th mat-header-cell *matHeaderCellDef>Anno di uscita</th>
+          <td mat-cell *matCellDef="let film">{{ film.release_year }}</td>
+        </ng-container>
 
-      <ng-container matColumnDef="rating">
-        <th mat-header-cell *matHeaderCellDef>Rating</th>
-        <td mat-cell *matCellDef="let film">{{ film.rating }}</td>
-      </ng-container>
+        <ng-container matColumnDef="rating">
+          <th mat-header-cell *matHeaderCellDef>Rating</th>
+          <td mat-cell *matCellDef="let film">{{ film.rating }}</td>
+        </ng-container>
 
-      <ng-container matColumnDef="genre">
-        <th mat-header-cell *matHeaderCellDef>Genere</th>
-        <td mat-cell *matCellDef="let film">{{ film.genre }}</td>
-      </ng-container>
+        <ng-container matColumnDef="genre">
+          <th mat-header-cell *matHeaderCellDef>Genere</th>
+          <td mat-cell *matCellDef="let film">{{ film.genre }}</td>
+        </ng-container>
 
-      <ng-container matColumnDef="language">
-        <th mat-header-cell *matHeaderCellDef>Lingua</th>
-        <td mat-cell *matCellDef="let film">{{ film.language }}</td>
-      </ng-container>
+        <ng-container matColumnDef="language">
+          <th mat-header-cell *matHeaderCellDef>Lingua</th>
+          <td mat-cell *matCellDef="let film">{{ film.language }}</td>
+        </ng-container>
 
-      <ng-container matColumnDef="cost">
-        <th mat-header-cell *matHeaderCellDef>Costo</th>
-        <td mat-cell *matCellDef="let film">{{ film.cost }} € </td>
-      </ng-container>
+        <ng-container matColumnDef="cost">
+          <th mat-header-cell *matHeaderCellDef>Costo</th>
+          <td mat-cell *matCellDef="let film">{{ film.cost }} € </td>
+        </ng-container>
 
-      <ng-container matColumnDef="action">
-        <th mat-header-cell *matHeaderCellDef>Noleggio</th>
-        <td mat-cell *matCellDef="let film"> <button mat-button>Noleggia</button></td>
-      </ng-container>
+        <ng-container matColumnDef="action">
+          <th mat-header-cell *matHeaderCellDef>Noleggio</th>
+          <td mat-cell *matCellDef="let film"> <button mat-button>Noleggia</button></td>
+        </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
-  </div>
-</div>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+    </div>
+  </mat-sidenav-content>
+</mat-sidenav-container>
