--- a/src/app/past-rental/past-rental.component.html
+++ b/src/app/past-rental/past-rental.component.html
@@ -1,42 +1,50 @@
-<div class="main">
-  <div class="container">
-    <div class="avatar">{{ userFirstName.charAt(0) }}</div>
-    <h1 class="user"> {{ userFirstName }} {{userLastName}} </h1>
-    <h2> Spesa totale noleggi passati: {{ totalAmount }} €</h2>
+<mat-sidenav-container class="sidenav-container" >
+  <mat-sidenav #sidenav [opened]="isSidenavOpen" class="sidenav-left">
+    <div class="container">
+      <div class="avatar">{{ userFirstName.charAt(0) }}</div>
+      <h1 class="user"> {{ userFirstName }} {{userLastName}} </h1>
 
-    <button mat-raised-button class="button-home" (click)="backToHome()"> Ritorna all'HomePage </button>
+      <button mat-raised-button color="primary" class="bottom-home" (click)="backToHome()">HomePage</button>
+      <button mat-raised-button color="primary" class="personal-rental-style" (click)="openPersonalRental()">Noleggi attivi</button>
+    </div>
+  </mat-sidenav>
 
-  </div>
+  <mat-sidenav-content>
+    <div class="bottom-style">
+      <button class="bottom-menu" mat-raised-button color="primary" (click)="toggleSidenav()">Menu </button>
+      <button class="bottom-menu" mat-raised-button color="primary"> Spesa totale : {{ totalAmount }} € </button>
+    </div>
 
-  <div class="table" *ngIf="pastRentalsFilms.length > 0; else noRentals">
-    <table mat-table [dataSource]="pastRentalsFilms">
+      <div class="table" *ngIf="pastRentalsFilms.length > 0; else noRentals">
+        <table mat-table [dataSource]="pastRentalsFilms">
 
-      <ng-container matColumnDef="title">
-        <th mat-header-cell *matHeaderCellDef>Titolo</th>
-        <td (click)="openMovieDetails(film)" mat-cell *matCellDef="let film">{{ film.title }}</td>
-      </ng-container>
+          <ng-container matColumnDef="title">
+            <th mat-header-cell *matHeaderCellDef>Titolo</th>
+            <td (click)="openMovieDetails(film)" mat-cell *matCellDef="let film">{{ film.title }}</td>
+          </ng-container>
 
-      <ng-container matColumnDef="rental_date">
-        <th mat-header-cell *matHeaderCellDef>Data di noleggio</th>
-        <td mat-cell *matCellDef="let film">{{ film.rental_date.split("T")[0] }}</td>
-      </ng-container>
+          <ng-container matColumnDef="rental_date">
+            <th mat-header-cell *matHeaderCellDef>Data di noleggio</th>
+            <td mat-cell *matCellDef="let film">{{ film.rental_date.split("T")[0] }}</td>
+          </ng-container>
 
-      <ng-container matColumnDef="return_date">
-        <th mat-header-cell *matHeaderCellDef>Data di consegna</th>
-        <td mat-cell *matCellDef="let film">{{ film.return_date.split("T")[0] }}</td>
-      </ng-container>
+          <ng-container matColumnDef="return_date">
+            <th mat-header-cell *matHeaderCellDef>Data di consegna</th>
+            <td mat-cell *matCellDef="let film">{{ film.return_date.split("T")[0] }}</td>
+          </ng-container>
 
-      <ng-container matColumnDef="amount">
-        <th mat-header-cell *matHeaderCellDef>Costo</th>
-        <td mat-cell *matCellDef="let film">{{ film.amount }}€</td>
-      </ng-container>
+          <ng-container matColumnDef="amount">
+            <th mat-header-cell *matHeaderCellDef>Costo</th>
+            <td mat-cell *matCellDef="let film">{{ film.amount }}€</td>
+          </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
-  </div>
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+      </div>
 
-  <ng-template #noRentals>
-    <p> Non sono presenti noleggi passati </p>
-  </ng-template>
-</div>
+    <ng-template #noRentals>
+      <p> Non sono presenti noleggi passati </p>
+    </ng-template>
+  </mat-sidenav-content>
+</mat-sidenav-container>
