--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -52,9 +52,9 @@
       </tr>
 
       <!-- La pipe keyvalue di Angular trasforma una mappa in un array di coppie chiave-valore.  -->
-      <tr *ngFor="let store of copiesForStore | keyvalue" >
-        <td style="text-align: center"> {{ store.key }}</td>
-        <td style="text-align: center"> {{ store.value }}</td>
+      <tr *ngFor="let store of storesWithFilm" >
+        <td style="text-align: center"> {{ store.address }}</td>
+        <td style="text-align: center"> {{ store.numero_copie }}</td>
       </tr>
     </table>
 
